<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:background="@drawable/grad_bg"
    android:weightSum="20"
    tools:showIn="@layout/app_bar_main">

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5"
        app:srcCompat="@drawable/reading"
        android:id="@+id/logo"
        android:layout_gravity="center"
        />
    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:text="@string/app_name"
        android:id="@+id/headingText"
        android:fontFamily="sans-serif-medium"
        android:layout_weight="1"
        android:textColor="#ffffff"
        android:textSize="20dp"
        android:layout_gravity="center"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>

        <Button
            android:id="@+id/btn1"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:background="@drawable/buttonshape"
            android:layout_weight="1.5"
            android:shadowColor="#A8A8A8"
            android:layout_gravity="center"
            android:shadowDx="0"
            android:shadowDy="0"
            android:shadowRadius="5"
            android:textSize="16sp"
            android:fontFamily="sans-serif-medium"
            android:text="@string/student_access"
            android:textColor="#FFFFFF" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"/>

        <Button
            android:id="@+id/btn2"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:background="@drawable/buttonshape"
            android:layout_weight="1.5"
            android:shadowColor="#A8A8A8"
            android:shadowDx="0"
            android:shadowDy="0"
            android:layout_gravity="center"
            android:shadowRadius="6"
            android:textSize="16sp"
            android:fontFamily="sans-serif-medium"
            android:text="@string/teacher_access"
            android:textColor="#FFFFFF" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"/>
        <Button
            android:id="@+id/btn3"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:background="@drawable/buttonshape"
            android:layout_weight="1.5"
            android:shadowColor="#A8A8A8"
            android:shadowDx="0"
            android:layout_gravity="center"
            android:shadowDy="0"
            android:textSize="16sp"
            android:fontFamily="sans-serif-medium"
            android:shadowRadius="5"
            android:text="@string/admin_access"
            android:textColor="#FFFFFF"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>

        <Button
            android:id="@+id/btn4"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1.5"
            android:background="@drawable/buttonshape"
            android:shadowColor="#A8A8A8"
            android:shadowDx="0"
            android:shadowDy="0"
            android:textSize="16sp"
            android:fontFamily="sans-serif-medium"
            android:layout_gravity="center"
            android:shadowRadius="5"
            android:text="@string/about_us"
            android:textColor="#FFFFFF"/>


    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"/>

</LinearLayout>